src/features/dsl/grammar.ebnf
(* ============================================================================
   DSL Grammar Specification (EBNF)

   This is the canonical grammar for the hardware DSL. Both the Chevrotain
   parser and any future tree-sitter implementation should implement this spec.

   Notation:
   - { X } means zero or more X
   - [ X ] means optional X
   - X | Y means X or Y
   - "x" means terminal/keyword
   - UPPER_CASE means token from lexer
   ============================================================================ *)

(* ============================================================================
   Program
   ============================================================================ *)

program =
  { circuit_definition | testbench_definition } ;

(* ============================================================================
   Circuit Definition
   ============================================================================ *)

circuit_definition =
  "circuit" IDENTIFIER [ parameters ] "{"
    { port_declaration | state_declaration }
    [ impl_block ]
  "}" ;

parameters =
  "(" parameter_decl { "," parameter_decl } ")" ;

parameter_decl =
  IDENTIFIER ":" parameter_type [ "=" literal ] ;

parameter_type =
  "Int" | "int" | "String" | "string" | "Bool" | "bool" ;

(* ============================================================================
   Port Declarations
   ============================================================================ *)

port_declaration =
  input_declaration | output_declaration | clock_declaration ;

input_declaration =
  "input" IDENTIFIER ":" type_expr ;

output_declaration =
  "output" IDENTIFIER ":" type_expr ;

clock_declaration =
  "clock" IDENTIFIER ;

(* ============================================================================
   State Declarations
   ============================================================================ *)

state_declaration =
  "state" IDENTIFIER ":" state_type_expr [ "=" literal ] ;

(* ============================================================================
   Type Expressions
   ============================================================================ *)

type_expr =
  bit_type | bus_type ;

bit_type =
  "Bit" | "bit" ;

bus_type =
  ( "Bus" | "bus" | "Word" | "word" ) "[" width_expr "]" ;

width_expr =
  NUMBER | IDENTIFIER ;  (* NUMBER for literal, IDENTIFIER for parameter ref *)

state_type_expr =
  type_expr | memory_type ;

memory_type =
  ( "Array" | "array" ) "[" NUMBER "," type_expr "]" ;

(* ============================================================================
   Implementation Block
   ============================================================================ *)

impl_block =
  "impl" "{" { impl_item } "}" ;

impl_item =
  node_declaration | connect_statement | on_clock_statement | assignment ;

(* ============================================================================
   Node Declaration
   ============================================================================ *)

node_declaration =
  "node" IDENTIFIER ":" IDENTIFIER [ arguments ] ;

arguments =
  "(" argument { "," argument } ")" ;

argument =
  IDENTIFIER "=" argument_value ;

argument_value =
  literal | array_literal | object_literal | IDENTIFIER ;  (* IDENTIFIER for param ref *)

array_literal =
  "[" [ argument_value { "," argument_value } ] "]" ;

object_literal =
  "{" [ object_entry { "," object_entry } ] "}" ;

object_entry =
  NUMBER ":" argument_value ;

(* ============================================================================
   Connect Statement
   ============================================================================ *)

connect_statement =
  "connect" port_ref "->" port_ref ;

port_ref =
  IDENTIFIER [ "." IDENTIFIER ] ;  (* node.port or just port *)

(* ============================================================================
   Behavioral Statements
   ============================================================================ *)

on_clock_statement =
  "on" IDENTIFIER clock_edge "{" { statement } "}" ;

clock_edge =
  "rising" | "falling" ;

statement =
  assignment | conditional_statement ;

assignment =
  IDENTIFIER "=" expression ;

conditional_statement =
  "if" expression "{" { statement } "}" [ "else" "{" { statement } "}" ] ;

(* ============================================================================
   Expressions
   ============================================================================ *)

expression =
  binary_expression ;

binary_expression =
  unary_expression { binary_operator unary_expression } ;

unary_expression =
  [ unary_operator ] primary_expression ;

primary_expression =
  literal
  | IDENTIFIER
  | "(" expression ")" ;

binary_operator =
  "+" | "-" | "*" | "/"
  | "&" | "|" | "^"
  | "==" | "!=" | "<" | ">" | "<=" | ">=" ;

unary_operator =
  "!" | "~" | "-" ;

(* ============================================================================
   Literals
   ============================================================================ *)

literal =
  NUMBER | STRING | "true" | "false" ;

(* ============================================================================
   Testbench Definition
   ============================================================================ *)

testbench_definition =
  "testbench" IDENTIFIER "{"
    circuit_ref
    { test_port_declaration }
    [ test_impl_block ]
  "}" ;

circuit_ref =
  "use" "circuit" IDENTIFIER "as" IDENTIFIER ;

test_port_declaration =
  test_input_declaration | test_output_declaration | test_clock_declaration ;

test_input_declaration =
  "input" IDENTIFIER ":" test_type_expr ;

test_output_declaration =
  "output" IDENTIFIER ":" test_type_expr ;

test_clock_declaration =
  "clock" IDENTIFIER [ "@" frequency_expr ] ;

test_type_expr =
  "Bit" | "bit" | ( "Bus" | "bus" ) "[" NUMBER "]" ;

frequency_expr =
  NUMBER IDENTIFIER ;  (* e.g., 100 MHz *)

(* ============================================================================
   Testbench Implementation
   ============================================================================ *)

test_impl_block =
  "impl" "{" { test_impl_item } "}" ;

test_impl_item =
  test_node_declaration | test_connect_statement | stimulus_block | capture_block ;

test_node_declaration =
  "node" IDENTIFIER ":" IDENTIFIER ;

test_connect_statement =
  "connect" port_ref "->" port_ref ;

(* ============================================================================
   Stimulus Block
   ============================================================================ *)

stimulus_block =
  "stimulus" "on" IDENTIFIER "{" { stimulus_event } "}" ;

stimulus_event =
  "at" stimulus_timing ":" stimulus_assignment { "," stimulus_assignment } ;

stimulus_timing =
  expression [ ".." expression [ "step" NUMBER ] ] ;

stimulus_assignment =
  IDENTIFIER "=" expression ;

(* ============================================================================
   Capture Block
   ============================================================================ *)

capture_block =
  "capture" "{" { capture_item } "}" ;

capture_item =
  signals_declaration | format_declaration | filename_declaration ;

signals_declaration =
  "signals" ":" "[" [ IDENTIFIER { "," IDENTIFIER } ] "]" ;

format_declaration =
  "format" ":" IDENTIFIER ;

filename_declaration =
  "filename" ":" STRING ;

(* ============================================================================
   Lexical Tokens
   ============================================================================ *)

(*
  IDENTIFIER = letter { letter | digit | "_" }
  NUMBER = digit { digit } | "0x" hex_digit { hex_digit } | "0b" binary_digit { binary_digit }
  STRING = '"' { character } '"'
  COMMENT = "//" { character } newline | "/*" { character } "*/"
*)
