src/features/dsl/parser/lexer.ts
/**
 * DSL Lexer (Tokenizer)
 *
 * Converts raw DSL text into a stream of tokens.
 *
 * Features:
 * - Recognizes all DSL keywords, operators, and literals
 * - Tracks source locations for error reporting
 * - Handles comments (both single-line and multi-line)
 * - Supports multiple number formats (decimal, hex, binary)
 * - Provides helpful error messages for invalid tokens
 */

import { createLocation, createRange, SourceLocation, SourceRange } from '../types/ast';
import { Token, TokenType, createToken, getKeywordType } from './token';

// ============================================================================
// Lexer Error
// ============================================================================

export class LexerError extends Error {
  constructor(
    message: string,
    public location: SourceLocation,
    public source?: string
  ) {
    super(message);
    this.name = 'LexerError';
  }
}

// ============================================================================
// Lexer
// ============================================================================

export class Lexer {
  private input: string;
  private position: number = 0;
  private line: number = 1;
  private column: number = 1;
  private source?: string;

  constructor(input: string, source?: string) {
    this.input = input;
    this.source = source;
  }

  /**
   * Tokenize the entire input
   */
  public tokenize(): Token[] {
    const tokens: Token[] = [];

    while (!this.isAtEnd()) {
      const token = this.nextToken();
      // Skip newlines and comments in the token stream
      // (they can be preserved if needed for formatting tools)
      if (
        token.type !== TokenType.NEWLINE &&
        token.type !== TokenType.COMMENT
      ) {
        tokens.push(token);
      }
    }

    // Add EOF token
    tokens.push(
      createToken(
        TokenType.EOF,
        '',
        this.createRange(this.currentLocation(), this.currentLocation())
      )
    );

    return tokens;
  }

  /**
   * Get the next token
   */
  private nextToken(): Token {
    this.skipWhitespace();

    if (this.isAtEnd()) {
      return createToken(
        TokenType.EOF,
        '',
        this.createRange(this.currentLocation(), this.currentLocation())
      );
    }

    const start = this.currentLocation();
    const char = this.peek();

    // Comments
    if (char === '/' && this.peekNext() === '/') {
      return this.scanSingleLineComment(start);
    }
    if (char === '/' && this.peekNext() === '*') {
      return this.scanMultiLineComment(start);
    }

    // Numbers
    if (this.isDigit(char)) {
      return this.scanNumber(start);
    }

    // Strings
    if (char === '"') {
      return this.scanString(start);
    }

    // Identifiers and keywords
    if (this.isAlpha(char) || char === '_') {
      return this.scanIdentifier(start);
    }

    // Operators and delimiters
    return this.scanOperatorOrDelimiter(start);
  }

  /**
   * Skip whitespace (but track newlines)
   */
  private skipWhitespace(): void {
    while (!this.isAtEnd()) {
      const char = this.peek();
      if (char === ' ' || char === '\t' || char === '\r') {
        this.advance();
      } else if (char === '\n') {
        this.advance();
        this.line++;
        this.column = 1;
      } else {
        break;
      }
    }
  }

  /**
   * Scan a single-line comment
   */
  private scanSingleLineComment(start: SourceLocation): Token {
    this.advance(); // /
    this.advance(); // /

    const valueStart = this.position;
    while (!this.isAtEnd() && this.peek() !== '\n') {
      this.advance();
    }

    const value = this.input.substring(valueStart, this.position);
    return createToken(TokenType.COMMENT, value, this.createRange(start, this.currentLocation()));
  }

  /**
   * Scan a multi-line comment
   */
  private scanMultiLineComment(start: SourceLocation): Token {
    this.advance(); // /
    this.advance(); // *

    const valueStart = this.position;
    while (!this.isAtEnd()) {
      if (this.peek() === '*' && this.peekNext() === '/') {
        const value = this.input.substring(valueStart, this.position);
        this.advance(); // *
        this.advance(); // /
        return createToken(TokenType.COMMENT, value, this.createRange(start, this.currentLocation()));
      }
      if (this.peek() === '\n') {
        this.line++;
        this.column = 1;
      }
      this.advance();
    }

    throw new LexerError('Unterminated multi-line comment', start, this.source);
  }

  /**
   * Scan a number (decimal, hex, or binary)
   */
  private scanNumber(start: SourceLocation): Token {
    let value = '';
    let base = 10;

    // Check for hex (0x) or binary (0b)
    if (this.peek() === '0' && (this.peekNext() === 'x' || this.peekNext() === 'X')) {
      base = 16;
      this.advance(); // 0
      this.advance(); // x
      while (!this.isAtEnd() && this.isHexDigit(this.peek())) {
        value += this.advance();
      }
    } else if (this.peek() === '0' && (this.peekNext() === 'b' || this.peekNext() === 'B')) {
      base = 2;
      this.advance(); // 0
      this.advance(); // b
      while (!this.isAtEnd() && this.isBinaryDigit(this.peek())) {
        value += this.advance();
      }
    } else {
      // Decimal
      while (!this.isAtEnd() && this.isDigit(this.peek())) {
        value += this.advance();
      }
    }

    if (value === '') {
      throw new LexerError('Invalid number literal', start, this.source);
    }

    const numberValue = parseInt(value, base);
    const token = createToken(
      TokenType.NUMBER,
      value,
      this.createRange(start, this.currentLocation())
    );
    token.numberValue = numberValue;
    return token;
  }

  /**
   * Scan a string literal
   */
  private scanString(start: SourceLocation): Token {
    this.advance(); // opening "

    let value = '';
    while (!this.isAtEnd() && this.peek() !== '"') {
      if (this.peek() === '\\') {
        this.advance();
        if (this.isAtEnd()) {
          throw new LexerError('Unterminated string literal', start, this.source);
        }
        // Handle escape sequences
        const escaped = this.advance();
        switch (escaped) {
          case 'n':
            value += '\n';
            break;
          case 't':
            value += '\t';
            break;
          case 'r':
            value += '\r';
            break;
          case '\\':
            value += '\\';
            break;
          case '"':
            value += '"';
            break;
          default:
            value += escaped;
        }
      } else {
        if (this.peek() === '\n') {
          this.line++;
          this.column = 1;
        }
        value += this.advance();
      }
    }

    if (this.isAtEnd()) {
      throw new LexerError('Unterminated string literal', start, this.source);
    }

    this.advance(); // closing "

    const token = createToken(
      TokenType.STRING,
      value,
      this.createRange(start, this.currentLocation())
    );
    token.stringValue = value;
    return token;
  }

  /**
   * Scan an identifier or keyword
   */
  private scanIdentifier(start: SourceLocation): Token {
    let value = '';
    while (!this.isAtEnd() && (this.isAlphaNumeric(this.peek()) || this.peek() === '_')) {
      value += this.advance();
    }

    const type = getKeywordType(value);
    const token = createToken(type, value, this.createRange(start, this.currentLocation()));

    // Set boolean value for true/false
    if (type === TokenType.TRUE) {
      token.boolValue = true;
    } else if (type === TokenType.FALSE) {
      token.boolValue = false;
    }

    return token;
  }

  /**
   * Scan an operator or delimiter
   */
  private scanOperatorOrDelimiter(start: SourceLocation): Token {
    const char = this.advance();
